--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.1",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "mongoose": "^5.2.17",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
