--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/nodemon src/app.js --exec \"npm run lint && node\"",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/nodemon src/app.js --exec 'mocha -R min'"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0",
+    "chai": "^4.2.0"
   }
 }
