--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/nodemon src/app.js --exec \"npm run lint && node\"",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
-    "test": "./node_modules/.bin/nodemon src/app.js --exec 'mocha -R min'"
+    "test": "NODE_ENV=test ./node_modules/.bin/nodemon src/app.js --exec 'mocha --recursive -R min'"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4",
+    "chai": "^4.2.0",
     "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^5.2.0",
-    "chai": "^4.2.0"
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0"
   }
 }
