--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/nodemon src/app.js --exec \"npm run lint && node\"",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
-    "test": "NODE_ENV=test ./node_modules/.bin/nodemon src/app.js --exec 'mocha --recursive -R min'"
+    "test": "NODE_ENV=test ./node_modules/.bin/nodemon --exec 'mocha --recursive -R min'"
   },
   "keywords": [],
   "author": "",
