--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0",
     "faker": "^4.1.0",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
