--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-
 # Created by https://www.gitignore.io/api/git,node,macos,phpstorm
-
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
@@ -197,6 +195,12 @@ fabric.properties
 
 # Sonarlint plugin
 .idea/sonarlint
+
+#sqreen token
+sqreen.json
+
+#temporary disable uploads
+uploads
 
 
 # End of https://www.gitignore.io/api/git,node,macos,phpstorm
