--- a/server/package.json
+++ b/server/package.json
@@ -18,15 +18,17 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
-    "express-fileupload": "^1.0.0",
+    "express-rate-limit": "^3.3.0",
     "faker": "^4.1.0",
+    "helmet": "^3.14.0",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.17",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
+    "multer": "^1.4.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "sqreen": "^1.27.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
