--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "vue": "^2.5.2",
+    "vue-awesome-notifications": "^2.2.9",
+    "vue-router": "^3.0.1",
     "vuetify": "^1.2.5",
     "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
