--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,18 @@
     "express": "^4.16.3",
     "express-rate-limit": "^3.3.0",
     "faker": "^4.1.0",
+    "fawn": "^2.1.5",
     "helmet": "^3.14.0",
     "joi": "^13.6.0",
+    "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.17",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "sqreen": "^1.27.0"
+    "sqreen": "^1.27.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
