--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
     "vue-awesome-notifications": "^2.2.9",
+    "vue-multiselect": "^2.1.3",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.5",
     "vuex": "^3.0.1",
