--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.2.15",
+    "multer": "^1.4.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
