--- a/server/package.json
+++ b/server/package.json
@@ -15,31 +15,33 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
-    "helmet": "^3.13.0",
-    "http-status": "^1.2.0",
+    "helmet": "^3.16.0",
+    "http-status": "^1.3.2",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.2.15",
+    "mongoose": "^5.5.2",
     "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
+    "npm-check-updates": "^3.1.8",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.0",
-    "@types/node": "^11.13.4",
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.13.6",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3"
+    "nodemon": "^1.18.11",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.4.4"
   }
 }
