--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^4.6.8",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "multer": "^1.4.1",
     "nodemailer": "^6.1.1",
     "npm-check-updates": "^3.1.8",
+    "recaptcha2": "^1.3.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
