--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,35 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+/idea/workspace.xml
+
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 # compiled output
 /dist
 /tmp
