--- a/server/package.json
+++ b/server/package.json
@@ -16,36 +16,38 @@
   "license": "MIT",
   "dependencies": {
     "@types/nodemailer": "^6.4.0",
-    "bcrypt": "^3.0.7",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.21.2",
+    "express-ip": "^1.0.4",
+    "express-rate-limit": "^5.1.1",
+    "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.8.9",
+    "mongoose": "^5.9.7",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.2",
-    "npm-check-updates": "^4.0.1",
+    "nodemailer": "^6.4.6",
+    "npm-check-updates": "^4.1.1",
     "recaptcha2": "^1.3.3",
-    "underscore": "^1.9.2",
+    "underscore": "^1.10.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.2",
-    "@types/node": "^13.5.0",
-    "morgan": "^1.9.1",
+    "@types/express": "^4.17.4",
+    "@types/node": "^13.11.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   }
 }
