--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/express-session": "^1.17.0",
+    "@types/lodash": "^4.14.149",
     "@types/nodemailer": "^6.4.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
@@ -25,6 +29,7 @@
     "express-async-errors": "^3.1.1",
     "express-ip": "^1.0.4",
     "express-rate-limit": "^5.1.1",
+    "express-session": "^1.17.0",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
