--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express-session": "^1.17.0",
     "@types/lodash": "^4.14.149",
     "@types/nodemailer": "^6.4.0",
+    "@types/xss-filters": "0.0.27",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
@@ -40,9 +41,11 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "npm-check-updates": "^4.1.1",
+    "open": "^7.0.3",
     "recaptcha2": "^1.3.3",
     "underscore": "^1.10.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
