--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": []
           },
@@ -89,7 +90,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/client/shared/css/styles.css"
+              "src/client/shared/css/styles.css",
+              "src/client/assets/css/styles.css",
+              "./node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": []
           }
