--- a/client/package.json
+++ b/client/package.json
@@ -11,49 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "~9.1.3",
+    "@angular/common": "~9.1.3",
+    "@angular/compiler": "~9.1.3",
+    "@angular/core": "~9.1.3",
+    "@angular/forms": "~9.1.3",
+    "@angular/localize": "^9.1.3",
+    "@angular/platform-browser": "~9.1.3",
+    "@angular/platform-browser-dynamic": "~9.1.3",
+    "@angular/router": "~9.1.3",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^8.6.0",
-    "@ngrx/router-store": "^8.6.0",
-    "@ngrx/store": "^8.6.0",
-    "@ngrx/store-devtools": "^8.6.0",
+    "@ngrx/effects": "^9.1.0",
+    "@ngrx/router-store": "^9.1.0",
+    "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "bootstrap": "^4.4.1",
     "colors": "^1.4.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
-    "ngx-bootstrap": "^5.2.0",
-    "ngx-lightbox": "^2.1.1",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-lightbox": "^2.1.2",
     "ngx-uploader": "^8.0.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~6.5.5",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~13.1.4",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "~9.1.3",
+    "@angular/compiler-cli": "~9.1.3",
+    "@angular/language-service": "~9.1.3",
+    "@types/node": "^13.13.2",
+    "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.0.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.5.4",
-    "tslint": "~5.20.1",
-    "typescript": "~3.5.3"
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "~5.4.4",
+    "ts-node": "~8.9.0",
+    "tslint": "~6.1.1",
+    "typescript": "~3.8.3"
   }
 }
