added components for photo (admin): upload & gallery. Minor updates to server

--- a/client/angular.json
+++ b/client/angular.json
@@ -96,7 +96,8 @@
               "./node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": [
-              "src/client/assets/js/bootstrap.min.js"
+              "src/client/assets/js/bootstrap.min.js",
+              "src/client/assets/js/jquery.js"
             ]
           }
         },
