--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,4 @@
- {
+{
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
@@ -22,5 +22,8 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
