--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express-session": "^1.17.0",
-    "@types/lodash": "^4.14.150",
+    "@types/lodash": "^4.14.152",
     "@types/nodemailer": "^6.4.0",
     "@types/xss-filters": "0.0.27",
     "bcrypt": "^4.0.1",
@@ -31,17 +31,17 @@
     "express-ip": "^1.0.4",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
+    "express-winston": "^4.0.3",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.11",
+    "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
-    "npm-check-updates": "^4.1.2",
-    "open": "^7.0.3",
+    "open": "^7.0.4",
     "recaptcha2": "^1.3.3",
     "underscore": "^1.10.2",
     "winston": "^3.2.1",
@@ -50,12 +50,12 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
-    "@types/node": "^13.13.4",
+    "@types/node": "^14.0.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.3",
-    "ts-node": "^8.9.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   }
 }
