--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,18 @@
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
 ### macOS ###
 # General
 .DS_Store
