--- a/client/angular.json
+++ b/client/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "./node_modules/ngx-lightbox/lightbox.css"
             ],
@@ -89,6 +90,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/client/shared/css/styles.css",
               "src/client/assets/css/styles.css",
               "src/client/assets/css/bootstrap.min.css",
