--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.9",
     "@angular/localize": "^9.1.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
@@ -28,6 +31,7 @@
     "bootstrap": "^4.5.0",
     "colors": "^1.4.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "ng-multiselect-dropdown": "^0.2.10",
     "ngx-bootstrap": "^5.6.1",
@@ -42,9 +46,9 @@
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
     "@angular/language-service": "~9.1.9",
-    "@types/node": "^14.0.5",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^14.0.5",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
@@ -56,6 +60,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
     "tslint": "~6.1.2",
-    "typescript": "~3.9.3"
+    "typescript": "^3.8.3"
   }
 }
