--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.157",
     "@types/nodemailer": "^6.4.0",
     "@types/xss-filters": "0.0.27",
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
@@ -38,7 +39,7 @@
     "joi-objectid": "^3.0.1",
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.19",
-    "mongoose": "^5.9.23",
+    "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "open": "^7.0.4",
@@ -50,12 +51,12 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
-    "@types/node": "^14.0.22",
+    "@types/node": "^14.0.23",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   }
 }
