--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve -o",
     "build": "ng build",
     "test": "ng test",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ngcc"
@@ -35,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.19",
     "ng-multiselect-dropdown": "^0.2.10",
+    "ng-recaptcha": "^5.0.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-lightbox": "^2.1.2",
     "rxjs": "~6.6.0",
