--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,7 @@
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
-    "open": "^7.0.4",
+    "open": "^7.1.0",
     "recaptcha2": "^1.3.3",
     "underscore": "^1.10.2",
     "winston": "^3.3.3",
@@ -51,7 +51,8 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
-    "@types/node": "^14.0.23",
+    "@types/node": "^14.0.24",
+    "gulp": "^4.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
