--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
@@ -45,6 +46,7 @@
     "open": "^7.1.0",
     "recaptcha2": "^1.3.3",
     "underscore": "^1.10.2",
+    "uuid": "^8.3.0",
     "winston": "^3.3.3",
     "xss-filters": "^1.2.7"
   },
