1. Addding gulpfile for the prod bundling 2. Adding tavis for the CI 3. Minor code grooming

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,13 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@assets/*": ["src/assets/*"],
+      "@environments/*": ["src/environments/*"],
+    }
+  },
   "files": [],
   "references": [
     {
