--- a/server/package.json
+++ b/server/package.json
@@ -54,12 +54,17 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.24",
+    "del": "^6.0.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-zip": "^5.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-stream": "^6.1.0"
   }
 }
