--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -f ./images/* ./dist/images && copyfiles -f ./src/robots.txt ./dist && copyfiles -f ./src/cert/* ./dist/cert",
     "start": "nodemon ./dist/index.js",
     "dev": "nodemon --exec ts-node -- ./src/index.ts",
     "prod": "npm run build && npm run start",
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "connect-mongo": "^3.2.0",
+    "copyfiles": "^2.3.0",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
