--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && copyfiles -f ./images/* ./dist/images && copyfiles -f ./src/robots.txt ./dist && copyfiles -f ./src/cert/* ./dist/cert",
-    "start": "nodemon ./dist/index.js",
-    "dev": "nodemon --exec ts-node -- ./src/index.ts",
+    "build": "tsc && copyfiles -f ./package.json ./dist && copyfiles -f ./src/robots.txt ./dist",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon --inspect --exec ts-node -- ./src/index.ts",
     "prod": "npm run build && npm run start",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
     "lint": "tslint -t stylish --project \"tsconfig.json\""
@@ -15,10 +15,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/express-session": "^1.17.0",
-    "@types/lodash": "^4.14.157",
-    "@types/nodemailer": "^6.4.0",
-    "@types/xss-filters": "0.0.27",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -34,6 +30,7 @@
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "express-winston": "^4.0.3",
+    "fancy-log": "^1.3.3",
     "helmet": "^3.23.3",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
@@ -42,6 +39,7 @@
     "jwt-then": "^1.0.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "open": "^7.1.0",
@@ -54,12 +52,15 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.24",
+    "@types/nodemailer": "^6.4.0",
+    "@types/xss-filters": "0.0.27",
     "del": "^6.0.0",
-    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-run": "^1.7.1",
     "gulp-zip": "^5.0.2",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
