--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && copyfiles -f ./package.json ./dist && copyfiles -f ./src/robots.txt ./dist",
-    "start": "node ./dist/index.js",
+    "start": "node index.js",
     "dev": "nodemon --inspect --exec ts-node -- ./src/index.ts",
     "prod": "npm run build && npm run start",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
