--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "connect-history-api-fallback": "^1.6.0",
     "connect-mongo": "^3.2.0",
     "copyfiles": "^2.4.0",
     "cors": "^2.8.5",
