--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.1.6",
     "@angular/localize": "^10.1.6",
     "@angular/material": "^10.2.5",
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@ngrx/effects": "^10.0.1",
-    "@ngrx/router-store": "^10.0.1",
+    "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "bootstrap": "^4.5.3",
@@ -44,7 +44,7 @@
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular-devkit/build-angular": "^0.1102.1",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@angular/language-service": "~10.1.6",
