--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc && copyfiles -f ./package.json ./dist && copyfiles -f ./src/robots.txt ./dist",
     "start": "node index.js",
-    "dev": "nodemon --exec ts-node -- ./src/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node -- ./src/index.ts",
     "prod": "npm run build && npm run start",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
     "lint": "tslint -t stylish --project \"tsconfig.json\""
@@ -48,6 +48,7 @@
     "nodemailer": "^6.4.18",
     "open": "^7.4.1",
     "recaptcha2": "^1.3.3",
+    "redis": "^3.0.2",
     "underscore": "^1.12.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
@@ -61,6 +62,7 @@
     "@types/node": "^14.14.28",
     "@types/nodemailer": "^6.4.0",
     "@types/xss-filters": "0.0.27",
+    "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-run": "^1.7.1",
