--- a/client/angular.json
+++ b/client/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/styles.css",
               "./node_modules/ngx-lightbox/lightbox.css"
             ],
@@ -91,6 +92,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles.css",
               "src/client/shared/css/styles.css",
               "src/client/assets/css/styles.css",
               "src/client/assets/css/bootstrap.min.css",
