--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "pwa-node",
       "request": "launch",
       "name": "Node Debug",
       "args": ["src/index.ts"],
       "runtimeArgs": ["-r", "ts-node/register"],
       "cwd": "${workspaceFolder}/server",
-      "protocol": "inspector",
+      // "protocol": "inspector",
       "internalConsoleOptions": "openOnSessionStart",
       "env": { "NODE_ENV": "development" },
-      "restart": true
+      "restart": true,
+      "sourceMaps": true,
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     }
   ],
   "compounds": []
