--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "tsc && copyfiles -f ./package.json ./dist && copyfiles -f ./src/robots.txt ./dist",
-    "start": "node index.js",
+    "start-prod": "cross-env NODE_ENV=production node index.js",
+    "start": "cross-env NODE_ENV=development node index.js",
     "dev": "cross-env NODE_ENV=development nodemon --exec ts-node -- ./src/index.ts",
     "prod": "npm run build && npm run start",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
@@ -19,37 +20,37 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "connect-history-api-fallback": "^1.6.0",
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^4.4.1",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-ip": "^1.0.4",
-    "express-rate-limit": "^5.2.5",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
-    "express-winston": "^4.0.5",
+    "express-winston": "^4.1.0",
     "fancy-log": "^1.3.3",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-then": "^1.0.1",
-    "lodash": "^4.17.20",
-    "mongoose": "^5.11.16",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.18",
-    "open": "^7.4.1",
+    "nodemailer": "^6.6.0",
+    "open": "^8.0.9",
     "recaptcha2": "^1.3.3",
-    "redis": "^3.0.2",
-    "underscore": "^1.12.0",
+    "redis": "^3.1.2",
+    "underscore": "^1.13.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "xss-filters": "^1.2.7"
@@ -58,21 +59,21 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.28",
-    "@types/nodemailer": "^6.4.0",
+    "@types/lodash": "^4.14.169",
+    "@types/node": "^15.3.0",
+    "@types/nodemailer": "^6.4.1",
     "@types/xss-filters": "0.0.27",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-run": "^1.7.1",
-    "gulp-zip": "^5.0.2",
+    "gulp-zip": "^5.1.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.5",
-    "webpack": "^5.22.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
     "webpack-stream": "^6.1.2"
   }
 }
