--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "jscpd": "jscpd  src/**/*.ts",
+    "ncu:check": "ncu",
+    "ncu:update": "ncu",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -45,6 +48,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "jest-sonar-reporter": "^2.0.0",
+    "jscpd": "^3.3.26",
+    "npm-check-updates": "^11.8.5",
     "prettier": "^2.3.2",
     "sonarqube-scanner": "^2.8.1",
     "supertest": "^6.1.3",
@@ -70,5 +75,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
   }
 }
